[package]
name = "kv-test"
version = "0.1.0"
authors = ["Myk Melez <myk@mykzilla.org>"]

[dependencies]
leveldb="0"
lmdb="0"
tempdir="0"
db-key = "0.0.5"

[dev-dependencies]
rand="0"
walkdir = "2"
criterion = "0.2"

[[bench]]
name = "lmdb"
harness = false

[[bench]]
name = "leveldb"
harness = false
